# Agentic-Ai-Engine

./: .env  .env.example  .gitignore  BACKEND_LAUNCHER_GUIDE.md  COMPLETE_SETUP_SUMMARY.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  CONTRIBUTING.md  DATABASE_SCHEMA_ANALYSIS.md  DATABASE_SETUP_README.md  ERROR_HANDLING_GUIDE.md  FRONTEND_BACKEND_CONNECTION_FIXES.md  LOGGING_MIGRATION_STATUS.md  MEME_LORD_SUPREME_README.md  MEMORY_INTEGRATION_COMPLETE.md  MEMORY_SYSTEM_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_1_COMPLETION_SUMMARY.md  QUICKSTART.md  RAG_PIPELINE_ANALYSIS.md  README.md  REVOLUTIONARY_RAG_ANALYSIS.md  REVOLUTIONARY_UNIVERSAL_TOOLS_PROGRESS.md  SCHEMA_FIXES_REQUIRED.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  VERIFY_COLORS_WORKING.md  bulk_migrate_logger.py  check_admin_user.py  check_db.py  check_db_detailed.py  check_users_schema.py  comprehensive_logger_migration.py  create_admin_settings_tables.sql  create_admin_tables.py  detect_system_and_model.py  docker-compose.unified.yml  docker-compose.yml  fix_admin_history_table.py  fix_database.py  (+39 more)
.augment/rules/: Rule_1.md
app/: __init__.py  agent_builder_platform.py  apple_stock_monitor_agent.py  create_basic_auth_tables.py  http_client.py  main.py
app/agents/: __init__.py  templates.py
app/api/: __init__.py
app/backend_logging/: __init__.py  backend_logger.py  context.py  formatters.py  handlers.py  middleware.py  models.py
app/communication/: __init__.py  agent_communication_system.py  collaboration_manager.py  knowledge_sharing_protocols.py
app/config/: __init__.py  agent_config_integration.py  agent_config_manager.py  config_groups.py  config_migration.py  config_validator.py  session_document_config.py  settings.py  unified_config.py
app/core/: __init__.py  admin_model_manager.py  alerting_system.py  auth.py  circuit_breaker.py  clean_logging.py  component_manager.py  configuration_broadcaster.py  connection_validator.py  dependencies.py  dependency_injection.py  error_handling.py  error_logging.py  exceptions.py  global_config_manager.py  middleware.py  monitoring.py  node_bootstrap.py  node_registry.py  pagination.py  performance_optimizer.py  response_cache.py  seamless_integration.py  security.py  security_hardening.py  system_components.py  system_initialization.py  unified_system_orchestrator.py
app/llm/: __init__.py  manager.py  models.py  production_providers.py  providers.py
app/memory/: __init__.py  active_retrieval_engine.py  advanced_retrieval_mechanisms.py  dynamic_knowledge_graph.py  lifelong_learning_capabilities.py  memory_consolidation_system.py  memory_driven_decision_making.py  memory_models.py  memory_orchestrator.py  memory_system_bridge.py  multimodal_memory_support.py  unified_memory_system.py
app/models/: __init__.py  admin_settings.py  agent.py  api_management.py  auth.py  auth_backup.py  autonomous.py  document.py  enhanced_user.py  knowledge_base.py  meme.py  model_management.py  session_document_models.py  tool.py  user.py  workflow.py
app/nodes/: __init__.py  agent_message_node.py  sequential_execution_node.py  timer_node.py
app/optimization/: __init__.py  advanced_access_controls.py  intelligent_optimizer.py  monitoring_analytics.py  (+1 more)
config/: conversation_format_spec.md  logging.dev.yaml  logging.prod.yaml  logging.yaml  logging_env_vars.md  logging_module_hierarchy.json  setup_database.sh
data/: encryption.key  knowledge_bases.json  rag_config.json
docker/: Dockerfile.unified
docs/: API_CONTRACTS.md  BACKEND_API_DOCUMENTATION.md  CLEANED_PROJECT_STRUCTURE.md  COLOR_CODED_LOGGING.md  COLOR_LOGGING_IMPLEMENTATION_SUMMARY.md  DEEP_DIVE_SUMMARY.md  DEVELOPMENT_LAUNCHER.md  ENHANCED_ARCHITECTURE.md  KNOWLEDGE_BASE_MANAGEMENT_IMPLEMENTATION.md  MEME_AGENT_README.md  OPENWEBUI_INTEGRATION.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  README.md  SSO_AUTHENTICATION.md
examples/: model_management_example.py  unlimited_agents_demo.py
frontend/: .env  .env.example  ENHANCED_FEATURES.md  README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1758621978745-7af2d40af4cdc.mjs
scripts/: comprehensive_backend_validator.py  database_reset.py  diagnose_tools.py  initialize_models.py  migrate_database.py  model_management.py  register_production_tools.py  start-postgres.ps1  start-postgres.sh  start_clean.py  test_production_tools_direct.py  test_production_tools_integration.py  test_week1_tools_comprehensive.py  verify_memory_fixes.py
templates/: README.md  automation_agent_template.py  business_intelligence_agent_template.py  content_creator_agent_template.py  multimodal_agent_template.py  research_agent_template.py  template_generator.py
tests/: README.md  agent_tools_test.py  agent_validation_suite.py  agentic_intelligence_validation.py  agentic_vs_llm_comparison.py  component_test.py  comprehensive_agent_behavior_analysis.py  comprehensive_agentic_test_suite.py  custom_http_agent_test.py  detailed_agent_validation.py  direct_agent_test.py  final_agent_test.py  mock_agent_test.py  ollama_debug_test.py  proxy_bypass_test.py  pseudo_autonomy_detector.py  quick_agent_test.py  real_agent_test.py  run_agent_validation.py  run_agentic_validation.py  simple_agent_test.py  test_agent_builder_platform.py  test_truly_agentic_ai.py  test_unified_system_integration.py  tool_creation_validator.py  validate_agentic_system.py
(+535 files in other folders)
